2차 com.hunet.common.lib.repository -> com.hunet.common.data.jpa 밑에 .converter, .sequence, .softdelete